In between commit